# query-reformulation

./: .gitignore  README.md  generate_embeddings.py  mp_tokenize_docs.py  pyproject.toml  tokenize_docs.py  train.py
configs/eval/: topiOCQA.yaml  topiOCQA_debug.yaml
configs/search/: topiOCQA_generate_embedding.yaml  topiOCQA_generate_tokenized_psgs.yaml
configs/train/: t5-base.yaml
scripts/: generate_embedding.sh  train.sh
src/data_utils/: base.py  topiOCQA_dataset.py
src/eval_utils/: eval_topiocqa.py  generate_embeddings.py  index.py
src/modeling/: __init__.py
src/openai_utils/: openai_chat.py  role.py  run.py
src/settings/: configs.py
src/tools/: download_topiOCQA_data.py  logging_tools.py  misc.py
src/tools/preprocessing/: topiOCQA.py
