[project]
authors = [{name = "Eunhwan Park", email = "park.jude.96@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "query-reformulation"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[system-requirements]
cuda = "12.1"

[tool.pixi.project]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
faiss-gpu = ">=1.9.0,<2"
openai = ">=1.55.1,<2"
wget = ">=1.21.4,<2"
omegaconf = ">=2.3.0,<3"
pytorch = ">=2.5.1,<3"
transformers = ">=4.46.3,<5"
accelerate = ">=1.1.1,<2"
tiktoken = ">=0.8.0,<0.9"
loguru = ">=0.7.2,<0.8"
numpy = ">=1.26.4,<2"
torchvision = ">=0.20.1,<0.21"
