[project]
authors = [{name = "Eunhwan Park", email = "park.jude.96@gmail.com"}]
dependencies = ["pytrec-eval>=0.5,<0.6"]
description = "Add a short description here"
name = "query-reformulation"
requires-python = ">=3.11"
version = "0.1.0"

[pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = ["https://example.com/simple"]
find-links = [{path = './links'}]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[system-requirements]
cuda = "12.1"

[tool.pixi.project]
channels = ["nvidia", "pytorch", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
faiss-gpu = ">=1.9.0,<2"
openai = ">=1.55.1,<2"
wget = ">=1.21.4,<2"
omegaconf = ">=2.3.0,<3"
pytorch = ">=2.5.1,<3"
transformers = ">=4.46.3,<5"
accelerate = ">=1.1.1,<2"
tiktoken = ">=0.8.0,<0.9"
loguru = ">=0.7.2,<0.8"
torchvision = ">=0.20.1,<0.21"
numpy = ">=1.26.4,<2"
tqdm = ">=4.67.1,<5"
