[project]
authors = [{name = "John Choi", email = "jon@buzzni.com"}]
dependencies = [ "numpy", "loguru>=0.7.2,<0.8", "omegaconf>=2.3.0,<3", "openai>=1.55.1,<2", "pydantic>=2.10.2,<3", "toml>=0.10.2,<0.11", "tqdm>=4.67.1,<5", "wget>=3.2,<4", "transformers>=4.46.3,<5"]
description = "Add a short description here"
name = "query-reformulation"
requires-python = ">= 3.9, <= 3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "11.8"

[tool.pixi.dependencies]
faiss-gpu = ">=1.9.0,<2"
pytorch = ">=2.5.1,<3"
pytorch-cuda = ">=11.8,<12"

[tool.pixi.environments]
dev = ["dev"]
